--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@ html, body {
   margin: 0;
   padding: 0;
   height: 100%;
-  font-family: sans-serif;
+  font-family: "Courier New", Courier, monospace;
 }
 
 #map {
@@ -17,7 +17,7 @@ html, body {
   top: 10px;
   left: 10px;
   z-index: 10;
-  background: white;
+  background: black;
   padding: 6px;
   border-radius: 4px;
   box-shadow: 0 1px 4px rgba(0,0,0,0.3);
@@ -34,7 +34,7 @@ button, select {
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.65);
+  background: rgba(255, 255, 255, 0.65);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -42,12 +42,12 @@ button, select {
 }
 
 #intro-content {
-  background: white;
+  background: black;
   padding: 30px 35px;
   max-width: 500px;
   border-radius: 8px;
   text-align: center;
-  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.4);
+  box-shadow: 0 10px 30px rgba(255, 255, 255, 0.4);
 }
 
 #intro-title {
